{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 144,
  "lineage": "c6ec3ee4-e892-323d-3c7e-6d5f68fcc582",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "minecraft_java",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0298bbedea57214a2",
            "association_id": "eipassoc-0aa3bba9dda1ed71b",
            "domain": "vpc",
            "id": "eipalloc-0298bbedea57214a2",
            "instance": "i-02782e9d814724312",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-03d962267fc25a99a",
            "private_dns": "ip-10-0-101-148.ap-northeast-1.compute.internal",
            "private_ip": "10.0.101.148",
            "public_dns": "ec2-52-197-15-17.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "52.197.15.17",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "minecraft_java"
            },
            "tags_all": {
              "Name": "minecraft_java"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.minecraft_java",
            "aws_security_group.sg_java",
            "data.aws_ssm_parameter.amzn2_ami",
            "data.terraform_remote_state.iam",
            "data.terraform_remote_state.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "minecraft_java",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e3ceefc9a200a838",
            "arn": "arn:aws:ec2:ap-northeast-1:111990515695:instance/i-02782e9d814724312",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "java_server_profile",
            "id": "i-02782e9d814724312",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03d962267fc25a99a",
            "private_dns": "ip-10-0-101-148.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.101.148",
            "public_dns": "ec2-3-112-150-177.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "3.112.150.177",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-022c8c08065964939",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0702f7ea7ce78be80",
            "tags": {
              "Name": "minecraft_java"
            },
            "tags_all": {
              "Name": "minecraft_java"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00f6bd1d075bb8ac0"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "dependencies": [
            "aws_security_group.sg_java",
            "data.aws_ssm_parameter.amzn2_ami",
            "data.terraform_remote_state.iam",
            "data.terraform_remote_state.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_java",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:111990515695:security-group/sg-00f6bd1d075bb8ac0",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-00f6bd1d075bb8ac0",
            "ingress": [],
            "name": "minecraft_sg_java",
            "name_prefix": "",
            "owner_id": "111990515695",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00e6f20d52acdd341"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_egress_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:111990515695:security-group-rule/sgr-0e466caa517721c85",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0e466caa517721c85",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-00f6bd1d075bb8ac0",
            "security_group_rule_id": "sgr-0e466caa517721c85",
            "tags": {
              "Name": "minecraft_sg_allow_egress_all"
            },
            "tags_all": {
              "Name": "minecraft_sg_allow_egress_all"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg_java",
            "data.terraform_remote_state.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_internal_session",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:111990515695:security-group-rule/sgr-0b3b134f4d9f6e7ca",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0b3b134f4d9f6e7ca",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0b238755c88a0039b",
            "security_group_id": "sg-00f6bd1d075bb8ac0",
            "security_group_rule_id": "sgr-0b3b134f4d9f6e7ca",
            "tags": {
              "Name": "minecraft_sg_allow_java_client_ingress"
            },
            "tags_all": {
              "Name": "minecraft_sg_allow_java_client_ingress"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg_java",
            "data.terraform_remote_state.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_java_client",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:111990515695:security-group-rule/sgr-089ae0f0436a37046",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 25565,
            "id": "sgr-089ae0f0436a37046",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-00f6bd1d075bb8ac0",
            "security_group_rule_id": "sgr-089ae0f0436a37046",
            "tags": {
              "Name": "minecraft_sg_allow_java_client_ingress"
            },
            "tags_all": {
              "Name": "minecraft_sg_allow_java_client_ingress"
            },
            "to_port": 25565
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg_java",
            "data.terraform_remote_state.vpc"
          ]
        }
      ]
    }
  ]
}